fix section gap

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -143,7 +143,7 @@
 .section {
   display: grid;
   grid-auto-flow: row;
-  gap: 3em;
+  gap: 45px;
   max-width: 1240px;
   padding: 100px 20px 0;
   margin: 0 auto;
