--- a/src/scss/general/section.scss
+++ b/src/scss/general/section.scss
@@ -1,7 +1,7 @@
 .section {
     display: grid;
     grid-auto-flow: row;
-    gap: 3em;
+    gap: 45px;
 
     max-width: 1240px;
 
